--- a/About_Us.html
+++ b/About_Us.html
@@ -88,21 +88,21 @@
         <div class="row mt-4">
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="team-card">
-              <img src="Images/Kishore.jpg" alt="Team Member">
+              <img src="Images/Kishore.jpg" alt="President">
               <h5>Kishore Chaudhari</h5>
               <p>President</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="team-card">
-              <img src="Images/nitin.jpg" alt="President">
+              <img src="Images/nitin.jpg" alt="Director">
               <h5>Nitin Chaudhari</h5>
-              <p>Program Director</p>
+              <p>Director</p>
             </div>
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="team-card">
-              <img src="Images/Nilesh.jpg" alt="Team Member">
+              <img src="Images/Nilesh.jpg" alt="Program Manager">
               <h5>Nilesh Shinde</h5>
               <p>Program Manager</p>
             </div>
