--- a/index.html
+++ b/index.html
@@ -123,6 +123,47 @@
   </div>
 </section>
 </section>
+
+ <!-- --------------------Our Achievements --------------------->
+
+<section class="achievements-section">
+    <div class="container"> 
+      <h2 class="title">
+        Achievements & <span>Milestones</span>
+      </h2>
+      <p class="subtitle">Sneak peek of our success story</p>
+
+      <div class="achievements">
+        <div class="card fade-up">
+          <div class="icon">🏅</div>
+          <h3>1st Phase Training</h3>
+          <div class="big-number">260</div>
+          <p>Successfully trained 260 people about agriculture in Jain Irrigation System Company.</p>
+        </div>
+
+        <div class="card fade-up">
+          <div class="icon">🎯</div>
+          <h3>2nd Phase Training</h3>
+          <div class="big-number">300</div>
+          <p>Successfully trained 300 people in on-field training.</p>
+        </div>
+
+        <div class="card fade-up">
+          <div class="icon">🌍</div>
+          <h3>3rd Phase Training</h3>
+          <div class="big-number">240</div>
+          <p>Successfully trained 240 people in on-field training.</p>
+        </div>
+
+        <div class="card fade-up">
+          <div class="icon">💡</div>
+          <h3>More to Come</h3>
+          <div class="big-number green">∞</div>
+          <p>Continuing to empower farmers with modern agricultural skills.</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- ------------------  Our Work --------------------------  -->
   <!-- ------------------  Statement Section --------------------------  -->
 
