--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <body>
-<script src="one_script.js"></script>
+<script src="script.js"></script>
     <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
