--- a/About_Us.html
+++ b/About_Us.html
@@ -102,8 +102,8 @@
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="team-card">
-              <img src="Images/Nilesh.jpg" alt="Program Manager">
-              <h5>Nilesh Shinde</h5>
+              <img src="Images/Sonali.jpg" alt="Program Manager">
+              <h5>Sonali N. Shinde</h5>
               <p>Program Manager</p>
             </div>
           </div>
