--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------  Statement Section --------------------------  -->
   <section class="statement-section text-center py-5">
     <div class="container">
-      <h2>“Empowering Communities, Transforming Lives.”</h2>
+      <h2>“Together for People, Together for Progress.”</h2>
       <p>At Kirti Bahuddeshiya Sanstha, we are dedicated to creating opportunities, supporting education, and building a better future for everyone.</p>
     </div>
   </section>
