--- a/About_Us.html
+++ b/About_Us.html
@@ -102,7 +102,7 @@
           </div>
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="team-card">
-              <img src="Images/Sonali.jpg" alt="Program Manager">
+              <img src="Images/Sonali.png" alt="Program Manager">
               <h5>Sonali N. Shinde</h5>
               <p>Program Manager</p>
             </div>
